--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,60 @@
+# allow reload of this file with PRE r
+bind r source-file ~/.tmux.conf
+
 set -g default-terminal "screen-256color"
+set-option -g history-limit 5000 
+
+# enable mouse
+setw -g mouse on
+
+# remove delay
+set -sg escape-time 1
+
+# -r repeat time (Default 500 millis)
+set -g repeat-time 2000
+
+# set {window,pane} index to start at 1
+set -g base-index 1
+setw -g pane-base-index 1
+
+# aggressive resizing
+set -g aggressive-resize on  
+
+###### keybindings ######
+
+unbind C-Space
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
+
+bind | split-window -hc "#{pane_current_path}"
+bind - split-window -vc "#{pane_current_path}"
+
+bind n new-window
+bind k kill-window
+
+# vim style through panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# vim style through resizing
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+##### Vim mode #####
+setw -g mode-keys vi 
+bind Escape copy-mode
+bind p paste-buffer
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
+##### Visuals #####
+set -g status-style 'fg=colour0 bg=colour24'
+setw -g window-status-style 'fg=colour0'
+setw -g window-status-current-style 'fg=colour10 bold'
