--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # allow reload of this file with PRE r
 bind r source-file ~/.tmux.conf
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 set-option -g history-limit 5000 
 
 # enable mouse
@@ -27,11 +27,14 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+bind Space last-window
+
 bind | split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
 
 bind n new-window
-bind k kill-window
+bind & kill-window
+bind Delete kill-session
 
 # vim style through panes
 bind h select-pane -L
