added .vim, new .tmux.conf, cleaned stuff up

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,12 @@
 # allow reload of this file with PRE r
-bind r source-file ~/.tmux.conf
+bind r source-file "/home/$USER/.tmux.conf"
 
-set -g default-terminal "xterm-256color"
+active_window_bg=colour34
+inactive_window_bg=colour102
+bar_bg=colour237
+bar_fg=colour255
+
+set -g default-terminal "screen-256color"
 set-option -g history-limit 5000 
 
 # enable mouse
@@ -27,14 +32,13 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
-bind Space last-window
-
 bind | split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
 
 bind n new-window
-bind & kill-window
-bind Delete kill-session
+bind q kill-window
+
+bind i last-window
 
 # vim style through panes
 bind h select-pane -L
@@ -43,21 +47,36 @@ bind k select-pane -U
 bind l select-pane -R
 
 # vim style through resizing
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind -r H resize-pane -L 1
+bind -r J resize-pane -D 1
+bind -r K resize-pane -U 1
+bind -r L resize-pane -R 1
 
 ##### Vim mode #####
 setw -g mode-keys vi 
-bind Escape copy-mode
+#bind [ copy-mode
 bind p paste-buffer
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
+# toggle commands on/off for the local tmux session with F12
+bind -T root C-y  \
+  set prefix None \;\
+  set key-table off \;\
+  set -g window-status-current-style 'bg=colour234 fg=colour255' \;\
+  if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
+  refresh-client -S \;\
+
+bind -T off C-y \
+  set -u prefix \;\
+  set -g window-status-current-style 'bg=colour34 fg=colour255' \;\
+  set -u key-table \;\
+  refresh-client -S \;\
+
 ##### Visuals #####
-set -g status-style 'fg=colour0 bg=colour24'
-setw -g window-status-style 'fg=colour0'
-setw -g window-status-current-style 'fg=colour10 bold'
+set -g status-style 'bg=colour237 fg=colour255'
+setw -g window-status-style 'fg=colour245'
+setw -g window-status-current-style 'fg=colour34 bold'
+set -g status-right-style default
