--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,21 +62,23 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # toggle commands on/off for the local tmux session with F12
-bind -T root C-y  \
-  set prefix None \;\
-  set key-table off \;\
-  set -g window-status-current-style 'bg=colour234 fg=colour255' \;\
-  if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
-  refresh-client -S \;\
-
-bind -T off C-y \
-  set -u prefix \;\
-  set -g window-status-current-style 'bg=colour34 fg=colour255' \;\
-  set -u key-table \;\
-  refresh-client -S \;\
+# DISABLED, AUTOCOMPLETE IN NVIM IS SET TO C-y
+# bind -T root C-y  \
+#   set prefix None \;\
+#   set key-table off \;\
+#   set -g window-status-current-style 'bg=colour234 fg=colour255' \;\
+#   if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
+#   refresh-client -S \;\
+# 
+# bind -T off C-y \
+#   set -u prefix \;\
+#   set -g window-status-current-style 'bg=colour34 fg=colour255' \;\
+#   set -u key-table \;\
+#   refresh-client -S \;\
 
 ##### Visuals #####
 set -g status-style 'bg=colour237 fg=colour255'
 setw -g window-status-style 'fg=colour245'
 setw -g window-status-current-style 'fg=colour34 bold'
+set -g window-status-current-style 'bg=colour34 fg=colour255'
 set -g status-right-style default
