--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,3 +82,21 @@ setw -g window-status-style 'fg=colour245'
 setw -g window-status-current-style 'fg=colour34 bold'
 set -g window-status-current-style 'bg=colour34 fg=colour255'
 set -g status-right-style default
+
+#####################
+#      PLUGINS      #
+#####################
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
